# RustyGodot

./: .gitignore  Cargo.toml  README.md  setup_macos.sh
.cargo/: config.toml
.github/workflows/: ci.yml
game/: export_presets.cfg  game.gdextension  game.gdextension.uid  project.godot
game/assets/fonts/: PixelOperator8-Bold.ttf.import  PixelOperator8.ttf.import
game/assets/music/: time_for_adventure.mp3.import
game/assets/sounds/: coin.wav.import  explosion.wav.import  hurt.wav.import  jump.wav.import  power_up.wav.import  tap.wav.import
game/assets/sprites/: coin.png.import  fruit.png.import  knight.png.import  platforms.png.import  slime_green.png.import  slime_purple.png.import  world_tileset.png.import
game/assets/textures/Ships/: ShipIdle.png.import  ShipMove.png.import
game/scenes/: boat.tscn  coin.tscn  game.tscn  game.tscn114916979.tmp  game.tscn128817957.tmp  killzone.tscn  main.tscn  platform.tscn  player.tscn  slime.tscn
game/scripts/: boat.gd  boat.gd.uid  coin.gd.uid  game_manager.gd.uid  killzone.gd  killzone.gd.uid  player.gd  player.gd.uid  slime.gd  slime.gd.uid
rust/src/: Cargo.toml
rust/src/common/: Cargo.toml
rust/src/common/src/: handshake.rs  input_packet.rs  lib.rs  message_header.rs  ping_request.rs  replicated_node.rs  serializer.rs  snapshot.rs  stream_reader.rs  stream_writer.rs
rust/src/game/: Cargo.toml
rust/src/game/src/: input_manager.rs  lib.rs  linking_context.rs  message_header.rs  network_manager.rs  player.rs  serializer.rs  (+2 more)
rust/src/server/: Cargo.toml
rust/xtask/: Cargo.toml
rust/xtask/src/: main.rs
(+23 files in other folders)
