[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"        # Error handling
clap = { version = "4.4", features = ["derive"] } # CLI parsing
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] } # Downloading
zip = "0.6"           # Extracting Godot
fs_extra = "1.3"      # Recursive copying
const_format = "0.2"
dirs = "6.0.0"  # String formatting macros